<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.nagi.ddtools.ui.homepage.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_tool"
        android:name="com.nagi.ddtools.ui.toolpage.ToolPageFragment"
        android:label="@string/title_tool"
        tools:layout="@layout/fragment_tool" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.nagi.ddtools.ui.minepage.MinePageFragment"
        android:label="@string/title_mine"
        tools:layout="@layout/fragment_mine" />
</navigation>