<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".ui.toolpage.tools.fanboard.FanBoardActivity">


    <include
        android:id="@+id/title_include"
        layout="@layout/include_page_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/board_is_roll"
        style="@style/TextBigStyle"
        android:layout_marginStart="@dimen/dp_20"
        android:text="@string/fan_board_is_roll"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_include" />

    <com.nagi.ddtools.ui.widget.ColorPickerView
        android:id="@+id/board_color_picker_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/board_is_roll" />

    <com.nagi.ddtools.ui.widget.ColorPickerView
        android:id="@+id/board_color_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/board_color_picker_background" />

    <TextView
        android:id="@+id/board_roll_way"
        style="@style/TextBigStyle"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/roll_way"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/board_color_picker" />

    <RadioGroup
        android:id="@+id/board_roll_way_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@+id/board_roll_way"
        app:layout_constraintTop_toTopOf="@id/board_roll_way">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/board_roll_ltr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/roll_ltf"
            android:textColor="@color/black" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/board_roll_rtl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/roll_rtf"
            android:textColor="@color/black" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/board_roll_ttb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/roll_ttb"
            android:textColor="@color/black" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/board_roll_btt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/roll_btt"
            android:textColor="@color/black" />
    </RadioGroup>

    <TextView
        android:id="@+id/board_roll_speed"
        style="@style/TextBigStyle"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/roll_speed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/board_roll_way_group" />

    <SeekBar
        android:id="@+id/board_speed_seekbar"
        android:layout_width="@dimen/dp_250"
        android:layout_height="wrap_content"
        android:max="10"
        android:progress="3"
        app:layout_constraintBottom_toBottomOf="@+id/board_roll_speed"
        app:layout_constraintStart_toEndOf="@+id/board_roll_speed"
        app:layout_constraintTop_toTopOf="@+id/board_roll_speed" />

    <TextView
        android:id="@+id/board_text_size"
        style="@style/TextBigStyle"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/board_roll_speed" />

    <SeekBar
        android:id="@+id/board_size_seekbar"
        android:layout_width="@dimen/dp_250"
        android:layout_height="wrap_content"
        android:max="10"
        android:progress="3"
        app:layout_constraintBottom_toBottomOf="@+id/board_text_size"
        app:layout_constraintStart_toEndOf="@+id/board_text_size"
        app:layout_constraintTop_toTopOf="@+id/board_text_size" />

    <TextView
        android:id="@+id/board_input_text"
        style="@style/TextBigStyle"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/inputText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/board_text_size" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/board_input_edit"
        android:layout_width="@dimen/dp_250"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/board_input_text"
        app:layout_constraintStart_toEndOf="@+id/board_input_text"
        app:layout_constraintTop_toTopOf="@+id/board_input_text" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/board_click"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_10_round"
        android:text="@string/confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/board_input_edit" />

</androidx.constraintlayout.widget.ConstraintLayout>