<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2766CCFF"
    tools:context=".ui.minepage.user.login.LoginActivity">

    <ImageView
        android:id="@+id/login_title_back"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_marginStart="15dp"
        android:src="@drawable/baseline_arrow_back"
        app:layout_constraintBottom_toBottomOf="@+id/login_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/login_title"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpUsage" />

    <View
        android:id="@+id/login_main_body"
        android:layout_width="0dp"
        android:layout_height="290dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/bg_60_round"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_title" />

    <TextView
        android:id="@+id/login_user_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="@+id/login_title"
        app:layout_constraintStart_toStartOf="@+id/login_title"
        app:layout_constraintTop_toTopOf="@+id/login_main_body"
        tools:ignore="SpUsage" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_user_name_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintEnd_toEndOf="@+id/login_main_body"
        app:layout_constraintStart_toStartOf="@+id/login_main_body"
        app:layout_constraintTop_toBottomOf="@+id/login_user_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#2766CCFF"
            android:hint="@string/username"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_password_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="@+id/login_main_body"
        app:layout_constraintStart_toStartOf="@+id/login_main_body"
        app:layout_constraintTop_toBottomOf="@id/login_user_name_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_pass_word"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#2766CCFF"
            android:hint="@string/password"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/login_agree_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agree_user"
        android:textSize="13dp"
        app:layout_constraintBottom_toBottomOf="@+id/login_main_body"
        app:layout_constraintEnd_toEndOf="@+id/login_main_body"
        app:layout_constraintStart_toStartOf="@+id/login_main_body"
        app:layout_constraintTop_toBottomOf="@+id/login_password_layout"
        tools:ignore="SpUsage" />

    <TextView
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/bg_avla"
        android:text="@string/login"
        android:textSize="12dp"
        app:layout_constraintEnd_toEndOf="@+id/login_main_body"
        app:layout_constraintStart_toStartOf="@+id/login_main_body"
        app:layout_constraintTop_toBottomOf="@+id/login_main_body"
        tools:ignore="SpUsage" />

    <TextView
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@drawable/bg_avla"
        android:text="@string/register"
        android:textSize="12dp"
        app:layout_constraintEnd_toEndOf="@+id/login_main_body"
        app:layout_constraintStart_toStartOf="@+id/login_main_body"
        app:layout_constraintTop_toBottomOf="@+id/login_button"
        tools:ignore="SpUsage" />


</androidx.constraintlayout.widget.ConstraintLayout>