<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.toolpage.tools.idolsearch.IdolSearchActivity">

    <View
        android:id="@+id/search_title_background"
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:background="@drawable/bg_linear_gradient"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/search_body_background"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0"
        android:layout_marginTop="-35dp"
        android:background="@drawable/bg_fragment_rounded_corners"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_title_background" />

    <ImageView
        android:id="@+id/search_title_back"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_marginStart="@dimen/dp_15"
        android:src="@drawable/baseline_arrow_back"
        app:layout_constraintBottom_toBottomOf="@+id/search_title"
        app:layout_constraintStart_toStartOf="@+id/search_title_background"
        app:layout_constraintTop_toTopOf="@+id/search_title"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/search_title"
        style="@style/TitleTextStyle"
        android:text="@string/search_idol_group"
        app:layout_constraintBottom_toTopOf="@+id/search_body_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/search_location"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginEnd="@dimen/dp_15"
        android:gravity="center"
        android:text="@string/search_location_choose"
        app:drawableEndCompat="@drawable/baseline_arrow_drop_down"
        app:layout_constraintBottom_toBottomOf="@+id/search_title"
        app:layout_constraintEnd_toEndOf="@+id/search_title_background"
        app:layout_constraintTop_toTopOf="@+id/search_title"
        tools:ignore="SpUsage" />

    <TextView
        android:id="@+id/search_switch_text_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_group"
        android:textColor="@color/lty"
        app:layout_constraintBottom_toBottomOf="@+id/search_switch_search"
        app:layout_constraintEnd_toStartOf="@+id/search_switch_search"
        app:layout_constraintTop_toTopOf="@+id/search_switch_search" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/search_switch_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/lty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/search_body_background" />

    <TextView
        android:id="@+id/search_switch_text_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_idol"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/search_switch_search"
        app:layout_constraintStart_toEndOf="@+id/search_switch_search"
        app:layout_constraintTop_toTopOf="@+id/search_body_background" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_recycler"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_switch_search"
        tools:listitem="@layout/list_idol_group_view" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/search_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="@dimen/dp_20"
        android:clickable="true"
        android:src="@drawable/baseline_edit"
        app:layout_constraintBottom_toTopOf="@id/search_research"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="ContentDescription" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/search_research"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="@dimen/dp_40"
        android:clickable="true"
        android:src="@drawable/ic_reget"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="ContentDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>